--- a/lib/src/main/resources/mails/changePrimaryEmail/currentEmailCode/currentEmailCode.en_us.html
+++ b/lib/src/main/resources/mails/changePrimaryEmail/currentEmailCode/currentEmailCode.en_us.html
@@ -32,17 +32,18 @@
         line-height: 1.5;
     }
     .code {
-        display: inline-block;
-        padding: 10px;
-        background-color: #f4f4f4;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        font-size: 18px;
-        font-weight: bold;
-        letter-spacing: 2px;
-        color: #333;
-        margin-top: 20px;
-    }
+      display: inline-block;
+      padding: 10px;
+      background-color: #f4f4f4;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      font-size: 28px;
+      font-weight: bold;
+      letter-spacing: 6px;
+      color: #333;
+      margin-top: 20px;
+      font-family: 'Consolas';
+  }
     .footer {
         margin-top: 20px;
         font-size: 12px;
